--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <img src="" alt="image" width="100%" height="100%">
+        <img src="/css-challenge (2)/css-challenge/images/#hero-cover.3 (1).png" alt="image" width="100%" height="100%">
         <div class="brand">
            <h3>BrandName</h3> 
         </div>
